fix webkit appearance on mobile

--- a/src/style/_form.scss
+++ b/src/style/_form.scss
@@ -32,28 +32,31 @@ button {
 }
 input, .input {
   border: 1px solid $text-gray;
-  box-shadow: none !important;
+  border-radius: 0;
+  box-shadow: none;
   box-sizing: border-box;
   font-size: 1em;
   padding: 0.5em;
   outline: none !important;
   transition: all 0.3s ease;
   width: 100%;
+  -webkit-appearance: none;
   &:focus {
       box-shadow: 0 0 0 3px $dark-alpha;
-      border: 1px solid $text-gray;
+      border: 1px solid $text;
   }
   &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
       color: $mid-gray;
       opacity: 1; /* Firefox */
+      line-height: 1.3;
   }
   
   &:-ms-input-placeholder { /* Internet Explorer 10-11 */
-  color: $text-gray;
+    color: $text-gray;
   }
   
   &::-ms-input-placeholder { /* Microsoft Edge */
-  color: $text-gray;
+    color: $text-gray;
   }
 
   &.danger {
